--- a/temp.ipynb
+++ b/temp.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from localfunction import *\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import pygmt"
    ]
   },
   {
@@ -25,33 +26,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "! phase-indoburma-3-fixed_filter5sta_plusehb_filter_sta_rms_stasiunfilter.dat\n",
-      "---------------------------\n",
-      "start time        : 1964-01-22 15:58:43.700000\n",
-      "end time          : 2020-01-23 09:48:04.910000\n",
-      "minimum magnitude : 2.1\n",
-      "maximum magnitude : 7.9\n",
-      "minimum depth     : 0 km\n",
-      "maximum depth     : 271 km\n",
-      "station used      : 162\n",
-      "---------------------------\n",
-      "Event :   3244\n",
-      "Phase :  45911\n",
-      "-- P  :  40028\n",
-      "-- S  :   5883\n",
-      "---------------------------\n"
+      "PyGMT information:\n",
+      "  version: v0.8.0\n",
+      "System information:\n",
+      "  python: 3.9.9 | packaged by conda-forge | (main, Dec 20 2021, 02:36:06) [MSC v.1929 64 bit (AMD64)]\n",
+      "  executable: c:\\Users\\UX425IA\\.conda\\envs\\geo_env\\python.exe\n",
+      "  machine: Windows-10-10.0.22621-SP0\n",
+      "Dependency information:\n",
+      "  numpy: 1.24.1\n",
+      "  pandas: 1.5.2\n",
+      "  xarray: 2022.12.0\n",
+      "  netCDF4: 1.6.0\n",
+      "  packaging: 22.0\n",
+      "  geopandas: 0.10.2\n",
+      "  ghostscript: 9.54.0\n",
+      "GMT library information:\n",
+      "  cores: 6\n",
+      "  grid layout: rows\n",
+      "  library path: C:/Users/UX425IA/.conda/envs/geo_env/Library/bin/gmt.dll\n",
+      "  padding: 2\n",
+      "  plugin dir: C:/Users/UX425IA/.conda/envs/geo_env/Library/bin/gmt_plugins\n",
+      "  share dir: c:/programs/gmt6/share\n",
+      "  version: 6.3.0\n"
      ]
     }
    ],
    "source": [
-    "readeventphase(path+fname)"
+    "pygmt.show_versions()"
    ]
   }
  ],
