minor bugfix and feature update

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,60 +6,371 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from localfunction import *\n",
-    "from pathlib import Path\n",
-    "import pygmt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"G:\\\\My Drive\\\\Tomography\\\\110723\\\\data-fase-indoburma-11072023-convert\\\\\"\n",
-    "fname = \"phase-indoburma-3-fixed_filter5sta_plusehb_filter_sta_rms_stasiunfilter.dat\""
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"G:\\My Drive\\Tomography\\\\160124\\phase-turkey.dat\", delim_whitespace=True, comment=\"#\", header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_set = set(df[0].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyGMT information:\n",
-      "  version: v0.8.0\n",
-      "System information:\n",
-      "  python: 3.9.9 | packaged by conda-forge | (main, Dec 20 2021, 02:36:06) [MSC v.1929 64 bit (AMD64)]\n",
-      "  executable: c:\\Users\\UX425IA\\.conda\\envs\\geo_env\\python.exe\n",
-      "  machine: Windows-10-10.0.22621-SP0\n",
-      "Dependency information:\n",
-      "  numpy: 1.24.1\n",
-      "  pandas: 1.5.2\n",
-      "  xarray: 2022.12.0\n",
-      "  netCDF4: 1.6.0\n",
-      "  packaging: 22.0\n",
-      "  geopandas: 0.10.2\n",
-      "  ghostscript: 9.54.0\n",
-      "GMT library information:\n",
-      "  cores: 6\n",
-      "  grid layout: rows\n",
-      "  library path: C:/Users/UX425IA/.conda/envs/geo_env/Library/bin/gmt.dll\n",
-      "  padding: 2\n",
-      "  plugin dir: C:/Users/UX425IA/.conda/envs/geo_env/Library/bin/gmt_plugins\n",
-      "  share dir: c:/programs/gmt6/share\n",
-      "  version: 6.3.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'1803',\n",
+       " '2107',\n",
+       " '2408',\n",
+       " '2708',\n",
+       " '3115',\n",
+       " '3119',\n",
+       " '3121',\n",
+       " '3304',\n",
+       " '4613',\n",
+       " '4702',\n",
+       " '4904',\n",
+       " '6004',\n",
+       " '704',\n",
+       " '7301',\n",
+       " '8002',\n",
+       " '99003',\n",
+       " '99004',\n",
+       " '99006',\n",
+       " '99007',\n",
+       " 'ADCV',\n",
+       " 'AFYN',\n",
+       " 'AFYO',\n",
+       " 'AHAN',\n",
+       " 'AKCA',\n",
+       " 'AKCD',\n",
+       " 'AKDA',\n",
+       " 'AKO',\n",
+       " 'AKPI',\n",
+       " 'AKSY',\n",
+       " 'AKUM',\n",
+       " 'ALIN',\n",
+       " 'ALUC',\n",
+       " 'AMSY',\n",
+       " 'ANDN',\n",
+       " 'ANDZ',\n",
+       " 'ARMN',\n",
+       " 'ATA5',\n",
+       " 'ATAB',\n",
+       " 'AVNS',\n",
+       " 'AYAZ',\n",
+       " 'AYDN',\n",
+       " 'AYVA',\n",
+       " 'AZEY',\n",
+       " 'BAG',\n",
+       " 'BALY',\n",
+       " 'BAND',\n",
+       " 'BAYC',\n",
+       " 'BBAL',\n",
+       " 'BCAM',\n",
+       " 'BDRM',\n",
+       " 'BEYE',\n",
+       " 'BILE',\n",
+       " 'BIRL',\n",
+       " 'BKES',\n",
+       " 'BLIS',\n",
+       " 'BLKS',\n",
+       " 'BNAZ',\n",
+       " 'BOLU',\n",
+       " 'BORA',\n",
+       " 'BOYA',\n",
+       " 'BOZC',\n",
+       " 'BOZK',\n",
+       " 'BRDR',\n",
+       " 'BSIR',\n",
+       " 'BTAS',\n",
+       " 'BTIN',\n",
+       " 'BTMN',\n",
+       " 'BUCA',\n",
+       " 'BUHA',\n",
+       " 'BYAT',\n",
+       " 'CAEL',\n",
+       " 'CAM',\n",
+       " 'CATL',\n",
+       " 'CAVK',\n",
+       " 'CAY',\n",
+       " 'CBEY',\n",
+       " 'CDAG',\n",
+       " 'CIDE',\n",
+       " 'CKRK',\n",
+       " 'CMDR',\n",
+       " 'CMH',\n",
+       " 'CNG',\n",
+       " 'COAL',\n",
+       " 'CTIK',\n",
+       " 'CUAYA',\n",
+       " 'CUGUR',\n",
+       " 'CUKAN',\n",
+       " 'CUSAR',\n",
+       " 'CUZAR',\n",
+       " 'DAGE',\n",
+       " 'DAGI',\n",
+       " 'DBAD',\n",
+       " 'DCES',\n",
+       " 'DDEM',\n",
+       " 'DDIM',\n",
+       " 'DDKL',\n",
+       " 'DED',\n",
+       " 'DELI',\n",
+       " 'DEMI',\n",
+       " 'DERS',\n",
+       " 'DEUN',\n",
+       " 'DEVR',\n",
+       " 'DIGO',\n",
+       " 'DIYA',\n",
+       " 'DKRZ',\n",
+       " 'DNIZ',\n",
+       " 'DNZT',\n",
+       " 'DOGA',\n",
+       " 'DOMA',\n",
+       " 'DORK',\n",
+       " 'DSLC',\n",
+       " 'DURS',\n",
+       " 'DUV',\n",
+       " 'DYDN',\n",
+       " 'EAK',\n",
+       " 'EATA',\n",
+       " 'ECAT',\n",
+       " 'ECEA',\n",
+       " 'EKAR',\n",
+       " 'EKONA',\n",
+       " 'ELBA',\n",
+       " 'ELBS',\n",
+       " 'ELDT',\n",
+       " 'ELZG',\n",
+       " 'EMET',\n",
+       " 'EMRE',\n",
+       " 'EPOS',\n",
+       " 'ERBA',\n",
+       " 'ERE',\n",
+       " 'ERMK',\n",
+       " 'ESEN',\n",
+       " 'ETEKE',\n",
+       " 'EUZM',\n",
+       " 'FRT',\n",
+       " 'GAZI',\n",
+       " 'GBZM',\n",
+       " 'GCAM',\n",
+       " 'GDZ',\n",
+       " 'GEVA',\n",
+       " 'GEYV',\n",
+       " 'GOAD',\n",
+       " 'GOKD',\n",
+       " 'GOKT',\n",
+       " 'GOLE',\n",
+       " 'GOLH',\n",
+       " 'GULE',\n",
+       " 'GULN',\n",
+       " 'GUNE',\n",
+       " 'GZT',\n",
+       " 'HACI',\n",
+       " 'HAKT',\n",
+       " 'HANM',\n",
+       " 'HAR',\n",
+       " 'HASA',\n",
+       " 'HAVZ',\n",
+       " 'HEKM',\n",
+       " 'HISA',\n",
+       " 'HOMI',\n",
+       " 'IGDI',\n",
+       " 'ILGA',\n",
+       " 'INCE',\n",
+       " 'IZDR',\n",
+       " 'IZMD',\n",
+       " 'IZMR',\n",
+       " 'IZZE',\n",
+       " 'KAGI',\n",
+       " 'KAHM',\n",
+       " 'KAMA',\n",
+       " 'KAND',\n",
+       " 'KARB',\n",
+       " 'KAYN',\n",
+       " 'KBRS',\n",
+       " 'KBUK',\n",
+       " 'KDHN',\n",
+       " 'KELT',\n",
+       " 'KEMA',\n",
+       " 'KEPZ',\n",
+       " 'KERG',\n",
+       " 'KESK',\n",
+       " 'KESN',\n",
+       " 'KHMR',\n",
+       " 'KIBE',\n",
+       " 'KIBS',\n",
+       " 'KIRA',\n",
+       " 'KIRK',\n",
+       " 'KIRS',\n",
+       " 'KIZK',\n",
+       " 'KKBE',\n",
+       " 'KKOY',\n",
+       " 'KKUL',\n",
+       " 'KMER',\n",
+       " 'KNIK',\n",
+       " 'KOPT',\n",
+       " 'KORT',\n",
+       " 'KOTA',\n",
+       " 'KOVA',\n",
+       " 'KRIK',\n",
+       " 'KTT',\n",
+       " 'KURO',\n",
+       " 'KURT',\n",
+       " 'KUZU',\n",
+       " 'KZIL',\n",
+       " 'LAPS',\n",
+       " 'MACK',\n",
+       " 'MADA',\n",
+       " 'MANT',\n",
+       " 'MARD',\n",
+       " 'MAYA',\n",
+       " 'MCUR',\n",
+       " 'MDN',\n",
+       " 'MDUR',\n",
+       " 'MENG',\n",
+       " 'MGNB',\n",
+       " 'MGND',\n",
+       " 'MGUN',\n",
+       " 'MHAV',\n",
+       " 'MIDY',\n",
+       " 'MIND',\n",
+       " 'MKAM',\n",
+       " 'MSAY',\n",
+       " 'MTOP',\n",
+       " 'MTYK',\n",
+       " 'MULA',\n",
+       " 'MURA',\n",
+       " 'MUSM',\n",
+       " 'MYES',\n",
+       " 'NAR',\n",
+       " 'NARI',\n",
+       " 'NEV',\n",
+       " 'NIDE',\n",
+       " 'NZIP',\n",
+       " 'ODTU',\n",
+       " 'OLTU',\n",
+       " 'ORDU',\n",
+       " 'OZAP',\n",
+       " 'PASA',\n",
+       " 'PELI',\n",
+       " 'PERV',\n",
+       " 'RHAN',\n",
+       " 'SABU',\n",
+       " 'SAHE',\n",
+       " 'SAIM',\n",
+       " 'SAMS',\n",
+       " 'SANL',\n",
+       " 'SART',\n",
+       " 'SATE',\n",
+       " 'SCER',\n",
+       " 'SEDI',\n",
+       " 'SEMS',\n",
+       " 'SEYI',\n",
+       " 'SGAZ',\n",
+       " 'SIMV',\n",
+       " 'SINO',\n",
+       " 'SIRC',\n",
+       " 'SIRN',\n",
+       " 'SLHN',\n",
+       " 'SRTM',\n",
+       " 'STEP',\n",
+       " 'SUL',\n",
+       " 'SUNG',\n",
+       " 'SURC',\n",
+       " 'SUSE',\n",
+       " 'SUSU',\n",
+       " 'TAVA',\n",
+       " 'TNCL',\n",
+       " 'TOKA',\n",
+       " 'TRC1',\n",
+       " 'TRC2',\n",
+       " 'TRC3',\n",
+       " 'TURN',\n",
+       " 'TVAN',\n",
+       " 'UCKU',\n",
+       " 'ULDT',\n",
+       " 'USAK',\n",
+       " 'UZP',\n",
+       " 'VIZE',\n",
+       " 'VMUR',\n",
+       " 'YAHY',\n",
+       " 'YAYL',\n",
+       " 'YAZI',\n",
+       " 'YENC',\n",
+       " 'YIGI',\n",
+       " 'YOVA',\n",
+       " 'YOZG',\n",
+       " 'YURE',\n",
+       " 'YVAC',\n",
+       " 'ZEDA',\n",
+       " 'ZEYE'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pygmt.show_versions()"
+    "station_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sta = pd.read_csv(\"G:\\My Drive\\Tomography\\\\160124\\station-turkey.txt\",delim_whitespace=True,comment=\"#\",header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_set_2 = set(df_sta[0].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "station_set == station_set_2"
    ]
   }
  ],
@@ -81,12 +392,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "7cd9f3d74a51e72086e77b3ce90e589f910722e5e51eb1f41674a3c810498522"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
